# orouet

./: .editorconfig  .gitignore  README.md  package.json  pnpm-lock.yaml  roadmap.md  svelte.config.js  tsconfig.json  vite.config.js
messages/: de.json  en.json  zh.json
scripts/: extract-cldr.ts  tsconfig.json
src/: app.html  markdown.sass  styles.css  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: archive.rs  lib.rs  main.rs  secrets.rs
src/data/: LocaleData.ts  hölderlin.txt  kleist.txt
src/lib/: Backend.ts  BlockSchema.ts  Boundary.ts  Document.svelte.ts  DocumentContext.svelte.ts  Schema.ts  TextOptions.ts  VersionControl.svelte.ts  VersionControl.ts
src/lib/component/: DisplayOptions.svelte  DocumentView.svelte  LocaleSelect.svelte
src/lib/component/blockeditor/: BlockEditor.svelte  Placeholder.ts  VirtualSelection.ts
src/lib/component/chat/: ChatPanel.svelte  ChatSettings.svelte  ChatView.svelte
src/lib/component/documentview/: BlockView.svelte  ClusterView.svelte  Commands.ts  DocView.svelte  DocumentView.svelte  Editor.svelte  Placeholder.ts  UndoRedo.ts  ViewContext.svelte.ts
src/lib/component/graph/: BoundarySelect.svelte  CommitGraph.svelte  Layout.ts
src/lib/details/: DateFormat.ts  Memorized.svelte.ts  NodeView.svelte.ts  NodeViewContent.svelte  TypedNode.ts  Util.ts
src/lib/llm/: ChatProvider.ts  ChatSession.svelte.ts  DeepSeek.ts  OpenAI.ts
src/routes/: +layout.ts  +page.svelte
vite-plugins/: DebugInfoTS.ts
