[package]
name = "orouet"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "orouet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
zstd = "0.13.3"
ts-rs = "12.0.1"
log = "0.4.32"
tauri-plugin-log = "2"
tauri-plugin-stronghold = "2"
machine-uid = "0.6.0"
sha2 = "0.11.0"
rust-argon2 = "3.0.0"

[profile.dev.package.scrypt]
opt-level = 3
